Fix Navbar Alignment & Home Slogan

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -32,8 +32,8 @@ ul {
 
 p {
     color: var(--color-body-txt);
-    text-align: justify;
-    text-justify: inter-word;
+    /* text-align: justify;
+    text-justify: inter-word; */
 }
 
 .alert {
@@ -103,3 +103,14 @@ code.highlighter-rouge {
 .head-slogan h2::before {
     content: "";
 }
+
+@media only screen and (max-width: 600px) {
+    .head-slogan h1 {
+        font-size: 5rem;
+        border-bottom: 1rem solid rgb(156, 156, 156);
+        top: 50%;
+        left: 50%;
+        transform: translate(0%, 50%);
+        transition: ease-in 0.5s;
+    }
+  }
