--- a/assets/css/style-sn.css
+++ b/assets/css/style-sn.css
@@ -22,7 +22,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* margin-left: -0.5rem; */
   height: 100%;
 }
 
@@ -116,8 +115,8 @@
 @media only screen and (max-width: 600px) {
   .navbar {
     bottom: 0;
-    width: 100vw;
     height: 3rem;
+    padding: 0rem 0.2rem !important;
   }
 
   .logo {
